-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8u112, 9
-
Component/s: hotspot
-
b74
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8135568 | emb-9 | Zoltan Majo | P3 | Resolved | Fixed | team |
Currently, different platforms print different warning messages enabling intrinsics using SHA instructions. SPARC and AARCH64 print "SHA intrinsics are not available on this CPU", x86 prints "SHA instructions are not available on this CPU".
Moreover, SPARC and AARCH64 print detailed error messages if a specific intrinsic (e.g., SHA1) is enabled on a platform that does not implement an SHA1 instruction "Intrinsics for SHA-1 crypto hash functions not available.". x86 silently sets the appropriate flag (UseSHA1Intrinsics) to false.
A side effect of these inconsistencies is overly complicated test code, for example in compiler/intrinsics/sha/cli/SHAOptionsBase.java.
This issue is supposed to make handling of SHA-related options uniform and also update test code to expect a single, platform-independent output format.
Moreover, SPARC and AARCH64 print detailed error messages if a specific intrinsic (e.g., SHA1) is enabled on a platform that does not implement an SHA1 instruction "Intrinsics for SHA-1 crypto hash functions not available.". x86 silently sets the appropriate flag (UseSHA1Intrinsics) to false.
A side effect of these inconsistencies is overly complicated test code, for example in compiler/intrinsics/sha/cli/SHAOptionsBase.java.
This issue is supposed to make handling of SHA-related options uniform and also update test code to expect a single, platform-independent output format.
- backported by
-
JDK-8135568 Handling of SHA intrinsics inconsistent across platforms
-
- Resolved
-