8130120: Handling of SHA intrinsics inconsistent across platforms

Introduce common warning message and common processing of SHA intrinsic-related arguments.

Reviewed-by: kvn, mcberg